--- a/token-validate-lambda/pom.xml
+++ b/token-validate-lambda/pom.xml
@@ -5,12 +5,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.uom.idp</groupId>
-  <artifactId>key-validator-lambda</artifactId>
+  <artifactId>token-validate-lambda</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>key-validator-lambda</name>
+  <name>token-validate-lambda</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.lcip.xyz</url>
 
   <repositories>
     <repository>
